[refactor]: Improve handle of ip address